# agora-mi

./: .gitignore  Main Plan.md  README.md  README_GITHUB.md  REPRODUCIBILITY.md  colab_a100_execution_plan.md  custom.bib  main.tex  pyproject.toml  read.md  references.md  requirements.lock.txt  requirements.txt  results_dashboard.ipynb  results_hard_prompts.txt  run_all_models.sh  run_b4.ps1  run_pipeline.sh  submit_gautschi.sh  third_party_manifest.yaml
AGORA Data/: authorities.csv  collections.csv  documents.csv
artifacts/: sae_tiny_layer1.npz
configs/: default.yaml  label_map.yaml  policy_analysis_assistant.yaml  policy_analysis_assistant_cheap.yaml  policy_analysis_assistant_dense.yaml  policy_analysis_assistant_dense_smoke.yaml  policy_analysis_assistant_locked_2b.yaml  policy_analysis_assistant_sae.yaml  policy_analysis_assistant_sae_smoke.yaml  policy_feature_benchmark.yaml  policy_feature_benchmark_cheap.yaml  policy_feature_benchmark_dense.yaml  policy_feature_benchmark_dense_smoke.yaml  policy_feature_benchmark_locked_2b.yaml  policy_feature_benchmark_locked_9b_primary.yaml  policy_feature_benchmark_null_random_2b.yaml  policy_feature_benchmark_null_soft_frozen_2b.yaml  policy_feature_benchmark_null_tied_2b.yaml  policy_feature_benchmark_sae.yaml  policy_feature_benchmark_sae_smoke.yaml  policy_label_variants.yaml  policy_mech_interp.yaml  policy_mech_interp_gemma9b.yaml  policy_mech_interp_null_random_2b.yaml  policy_mech_interp_null_soft_frozen_2b.yaml  policy_mech_interp_null_tied_2b.yaml  policy_mech_interp_smoke.yaml  policy_text_prompt.yaml  policy_text_prompt_sensitivity.yaml  prompt_templates.yaml  proxy_causal_exploratory_matrix_2b.yaml  proxy_causal_exploratory_matrix_9b.yaml  public_value_families.yaml  run.yaml  run_gemma2b_it.yaml  run_gemma9b.yaml  run_llama3.yaml  run_tiny.yaml
docs/: activation_oracle_experiment_plan.md  artifact_manifest.md  icml_revision_lambda_runbook.md  lambda_runbook.md  public_value_proxy_spec.md  reviewer_hardening_runbook.md
experiments/: full_layer12_16k.yaml  full_layer16_16k.yaml  full_layer20_16k.yaml  full_layer24_16k.yaml  full_layer24_16k_causal.yaml  lambda_9b_robustness_partial.yaml  lambda_full_swap_2b_16k.yaml  pilot_200_layer24.yaml  revised_mvp_2b_16k.yaml
paper/: icml2026.bst  policy_audit_evidence_icml2026.tex  policy_feature_map_icml2026.tex  policy_feature_map_refs.bib
scripts/: _common.py  (+67 more)
(+1788 files in other folders)
