[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-interp"
version = "0.1.0"
description = "Revised MVP orchestrator for mechanistic policy text analysis"
requires-python = ">=3.12"
dependencies = [
  "igraph>=0.11",
  "jinja2>=3.1",
  "leidenalg>=0.10",
  "matplotlib>=3.9",
  "networkx>=3.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "peft>=0.17",
  "pyarrow>=18.0",
  "pydantic>=2.12",
  "pyyaml>=6.0",
  "sae-lens>=6.12.1",
  "safetensors>=0.5",
  "scikit-learn>=1.6",
  "scipy>=1.15",
  "seaborn>=0.13",
  "sentence-transformers>=3.0",
  "torch>=2.7",
  "transformers>=4.51",
  "typer>=0.16",
]

[project.scripts]
policy-interp = "policy_interp.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
