[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-mi-audit-repro"
version = "0.1.0"
description = "Reproducibility package for white box evidence package policy audit experiments"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=0.34",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=18.0",
  "safetensors>=0.5",
  "scienceplots>=2.1",
  "torch>=2.7",
  "transformers>=4.51",
  "tueplots>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
